Mavenization step 2: Adding .update project for repository.

--- a/com.zuehlke.contacts/pom.xml
+++ b/com.zuehlke.contacts/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>pom</packaging>
 	
 	<modules>
-		<module>../com.zuehlke.contacts.repo</module>
+		<module>../com.zuehlke.contacts.update</module>
 		<module>../com.zuehlke.contacts.target</module>
 	
 		<module>../com.zuehlke.contacts.core</module>
