--- a/com.zuehlke.contacts.update/pom.xml
+++ b/com.zuehlke.contacts.update/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>com.zuehlke.contacts.update</artifactId>
-	<packaging>eclipse-plugin</packaging>
+	<packaging>eclipse-repository</packaging>
 	<parent>
 		<groupId>com.zuehlke.contacts</groupId>
 		<artifactId>com.zuehlke.contacts</artifactId>
