--- a/com.zuehlke.contacts.ui.feature/pom.xml
+++ b/com.zuehlke.contacts.ui.feature/pom.xml
@@ -5,13 +5,25 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>com.zuehlke.contacts.ui.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
+	<groupId>com.zuehlke.contacts</groupId>
+	<version>1.0.0-SNAPSHOT</version>
 	<parent>
 		<groupId>com.zuehlke.contacts</groupId>
 		<artifactId>com.zuehlke.contacts</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../com.zuehlke.contacts/pom.xml</relativePath>
 	</parent>
-	
-	<groupId>com.zuehlke.contacts</groupId>
-	<version>1.0.0-SNAPSHOT</version>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
