--- a/com.zuehlke.contacts.update/pom.xml
+++ b/com.zuehlke.contacts.update/pom.xml
@@ -11,10 +11,10 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../com.zuehlke.contacts/pom.xml</relativePath>
 	</parent>
-	
+
 	<groupId>com.zuehlke.contacts</groupId>
 	<version>1.0.0-SNAPSHOT</version>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -25,52 +25,48 @@
 					<repositoryName>RCP Contacts Example</repositoryName>
 				</configuration>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.codehaus.mojo</groupId> -->
-<!-- 				<artifactId>build-helper-maven-plugin</artifactId> -->
-<!-- 				<version>1.3</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>attach-artifacts</id> -->
-<!-- 						<phase>package</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>attach-artifact</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<artifacts> -->
-<!-- 								<artifact> -->
-<!-- 									<file>contacts.target</file> -->
-<!-- 									<type>target</type> -->
-<!-- 									<classifier>contacts</classifier> -->
-<!-- 								</artifact> -->
-<!-- 							</artifacts> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-<!-- 	<build> -->
-<!-- 		<plugins> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.eclipse.tycho</groupId> -->
-<!-- 				<artifactId>tycho-p2-director-plugin</artifactId> -->
-<!-- 				<version>${tycho-version}</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>materialize-products</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>materialize-products</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 					<execution> -->
-<!-- 						<id>archive-products</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>archive-products</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-<!-- 		</plugins> -->
-<!-- 	</build> -->
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-director-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>materialize-products</id>
+						<goals>
+							<goal>materialize-products</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>archive-products</id>
+						<goals>
+							<goal>archive-products</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.mojo</groupId> -->
+			<!-- <artifactId>build-helper-maven-plugin</artifactId> -->
+			<!-- <version>1.3</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <id>attach-artifacts</id> -->
+			<!-- <phase>package</phase> -->
+			<!-- <goals> -->
+			<!-- <goal>attach-artifact</goal> -->
+			<!-- </goals> -->
+			<!-- <configuration> -->
+			<!-- <artifacts> -->
+			<!-- <artifact> -->
+			<!-- <file>contacts.target</file> -->
+			<!-- <type>target</type> -->
+			<!-- <classifier>contacts</classifier> -->
+			<!-- </artifact> -->
+			<!-- </artifacts> -->
+			<!-- </configuration> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
