--- a/com.zuehlke.contacts.update/pom.xml
+++ b/com.zuehlke.contacts.update/pom.xml
@@ -20,7 +20,7 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-repository-plugin</artifactId>
-				<version>${tycho-version}</version>
+				<version>${tycho.version}</version>
 				<configuration>
 					<repositoryName>RCP Contacts Example</repositoryName>
 				</configuration>
@@ -28,7 +28,7 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-director-plugin</artifactId>
-				<version>${tycho-version}</version>
+				<version>${tycho.version}</version>
 				<executions>
 					<execution>
 						<id>materialize-products</id>
@@ -44,29 +44,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin> -->
-			<!-- <groupId>org.codehaus.mojo</groupId> -->
-			<!-- <artifactId>build-helper-maven-plugin</artifactId> -->
-			<!-- <version>1.3</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>attach-artifacts</id> -->
-			<!-- <phase>package</phase> -->
-			<!-- <goals> -->
-			<!-- <goal>attach-artifact</goal> -->
-			<!-- </goals> -->
-			<!-- <configuration> -->
-			<!-- <artifacts> -->
-			<!-- <artifact> -->
-			<!-- <file>contacts.target</file> -->
-			<!-- <type>target</type> -->
-			<!-- <classifier>contacts</classifier> -->
-			<!-- </artifact> -->
-			<!-- </artifacts> -->
-			<!-- </configuration> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
