--- a/com.zuehlke.contacts/pom.xml
+++ b/com.zuehlke.contacts/pom.xml
@@ -7,24 +7,24 @@
 	<artifactId>com.zuehlke.contacts</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<modules>
 		<module>../com.zuehlke.contacts.update</module>
-	
+
 		<module>../com.zuehlke.contacts.core</module>
 		<module>../com.zuehlke.contacts.service.api</module>
 		<module>../com.zuehlke.contacts.service.local</module>
-		
+
 		<module>../com.zuehlke.contacts.ui</module>
 		<module>../com.zuehlke.contacts.ui.addressCheck.maps</module>
 		<module>../com.zuehlke.contacts.ui.addressCheck.zipcity</module>
 		<module>../com.zuehlke.contacts.ui.intent.outlook</module>
 		<module>../com.zuehlke.contacts.ui.intent.skype</module>
-		
+
 		<module>../com.zuehlke.contacts.core.feature</module>
 		<module>../com.zuehlke.contacts.ui.feature</module>
 	</modules>
-	
+
 	<properties>
 		<tycho.version>0.15.0</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +38,7 @@
 		<sonar.surefire.reportsPath>../../target/surefire-reports/</sonar.surefire.reportsPath>
 		<sonar.skippedModules></sonar.skippedModules>
 	</properties>
-	
+
 	<repositories>
 		<repository>
 			<id>indigo</id>
@@ -47,7 +47,7 @@
 			<url>http://download.eclipse.org/releases/indigo/</url>
 		</repository>
 	</repositories>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -109,6 +109,12 @@
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
 					<version>${tycho.version}</version>
+					<configuration>
+					<useUIHarness>true</useUIHarness>
+					<useUIThread>false</useUIThread>
+					<product>com.zuehlke.contacts.core.product</product>
+					<application>com.zuehlke.contacts.core.application</application>
+				</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
@@ -140,5 +146,5 @@
 			</plugin>
 		</plugins>
 	</reporting>
-	
+
 </project>
